--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,10 +10,33 @@
 </ion-header>
 
 <ion-content padding>
+  <!-- <ion-list>
+    <ion-item *ngFor="story of stories">
+      <ion-avatar item-left>
+        <img src="{{story.cover}}">
+      </ion-avatar>
+      <h2>{{story.title}}</h2>
+      <p>Author: {{story.author}}</p>
+    </ion-item>
+  </ion-list> -->
+
+  <ion-list>
+    <button ion-item *ngFor="let story of stories" (click)="itemSelected(story)">
+      {{ story.title }}
+    </button>  
+  </ion-list>
+
+
+</ion-content>
+
+<!-- 
+<ion-content padding>
   The world is your oyster.
   {{test}}
   <p>
     If you get lost, the
     <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
-</ion-content>
+</ion-content> -->
+
+
