--- a/ul_web_hooks/android/android_web_hook.html
+++ b/ul_web_hooks/android/android_web_hook.html
@@ -15,8 +15,8 @@ You can just copy-paste them in the <header> section of the appropriate pages of
 -->
 
 <head>
-<link rel="alternate" href="android-app://io.ionic.starter/https/https://n7h6d.app.goo.gl" />
-<link rel="alternate" href="android-app://io.ionic.starter/https/myrots.firebaseapp.com/__/auth/callback" />
+<link rel="alternate" href="android-app://com.storym.app/https/https://rh52q.app.goo.gl" />
+<link rel="alternate" href="android-app://com.storym.app/https/storym-application.firebaseapp.com/__/auth/callback" />
 
 <!-- Your other stuff from the head tag -->
 </head>
