Modification nom de l'application + affichage boutons

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,7 @@
         <ion-icon name="log-out"></ion-icon>
       </button>
     </ion-buttons>
-    <ion-title>Home</ion-title>
+    <ion-title>Les histoires disponibles</ion-title>
   </ion-toolbar>
 </ion-header>
 
