Modif design boutons

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -50,7 +50,7 @@
     <hr>
 
     <ion-item >
-      <button class = "button" ion-button (click)="read(story.id)">Lire</button>  
+      <button color="dark" class = "button" ion-button (click)="read(story.id)">Lire</button>  
     </ion-item>
 
   </ion-card>
