--- a/src/pages/read/read.html
+++ b/src/pages/read/read.html
@@ -5,7 +5,7 @@
       </ion-card-content>
   </ion-card>   
   <div style="text-align: center;">
-    <button class = "button"  *ngFor="let choice of slice.choices"  ion-button (click)="addNextSliceToStory(choice)" >{{choice.label}}</button>     
+    <button color="dark" outline class = "button"  *ngFor="let choice of slice.choices"  ion-button (click)="addNextSliceToStory(choice)" >{{choice.label}}</button>     
   </div>
 </ion-content>    
 
