--- a/src/pages/read/read.html
+++ b/src/pages/read/read.html
@@ -1,11 +1,29 @@
-<ion-content *ngIf="story" >
-  <ion-card  *ngFor="let slice of slicesOfStory" >
-      <ion-card-header>{{slice.title}} </ion-card-header>
-      <ion-card-content [innerHTML]="slice.text | safeHtml">
-      </ion-card-content>
-  </ion-card>   
-  <div style="text-align: center;">
-    <button color="dark" outline class = "button"  *ngFor="let choice of slice.choices"  ion-button (click)="addNextSliceToStory(choice)" >{{choice.label}}</button>     
-  </div>
+
+  <ion-toolbar>
+    <ion-title>{{slice.title}}</ion-title>
+    <ion-buttons start>
+      <button ion-button icon-only color="primary" (click)="openFiltering()">
+            <ion-icon name="settings"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-buttons end>
+      <button ion-button icon-only color="primary" (click)="doLogout()">
+        <ion-icon name="book"></ion-icon>
+      </button>
+      <button ion-button icon-only color="primary" (click)="markPage()">
+        <ion-icon name="bookmark"></ion-icon>
+      </button>
+    </ion-buttons>
+</ion-toolbar>
+
+<ion-content class = "story" ion-content *ngIf="story" >
+    <ion-card  *ngFor="let slice of slicesOfStory" >
+        <ion-card-content [innerHTML]="slice.text | safeHtml">
+        </ion-card-content>
+    </ion-card>   
+    <div style="text-align: center;">
+      <button color="dark" outline class = "button"  *ngFor="let choice of slice.choices"  ion-button (click)="addNextSliceToStory(choice)" >{{choice.label}}</button>     
+    </div>
 </ion-content>    
+
 
