--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -72,8 +72,8 @@
     </ion-item>
 
     <ion-item style = "text-align:center" *ngIf="story.mark" >
-      <button color="dark" class = "button-inline" ion-button (click)="read(story.id)">Continuer</button>  
-      <button color="dark" class = "button-inline" ion-button (click)="read(story.id)">Recommencer</button>  
+      <button color="dark" class = "button-inline" ion-button (click)="continue(story)">Continuer</button>  
+      <button color="dark" class = "button-inline" ion-button (click)="reload(story)">Recommencer</button>  
     </ion-item>
 
   </ion-card>
