Confirmation avant de signaler une histoire

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -75,6 +75,10 @@
       <button color="dark" class = "button-inline" ion-button (click)="continue(story)">Continuer</button>  
       <button color="dark" class = "button-inline" ion-button (click)="reload(story.id)">Recommencer</button>  
     </ion-item>
+    <hr>
+    <ion-item >
+      <button color="danger" class = "button" ion-button (click)="signaler()">Signaler</button>  
+    </ion-item>
 
   </ion-card>
   
